--- a/src/components/transactionsHistory/transactionList/TransactionList.module.css
+++ b/src/components/transactionsHistory/transactionList/TransactionList.module.css
@@ -1,6 +1,6 @@
 table {
   border-collapse: collapse;
-  width: 100%;
+  width: 500px;
   text-align: center;
   margin: 0 auto;
   border: 1px solid rgba(128, 128, 128, 0.582);
